# LLM-Knowledge-Extractor-backend

./: README.md  pyproject.toml
src/: ai_generator.py  app.py  databases.db
src/database/: db.py
src/routes/: api.py
